--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -43,7 +43,7 @@
 					<div class="row">
 						<div class="col-md-12">
 						</div>
-					</div><img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg">
+					</div><img alt="Logo biblioteca" src="imagens/episteme_1.jpg"  width=200 height=200>
 					<div class="row">
 						<div class="col-md-12">
 						</div>
@@ -86,7 +86,7 @@
 			<div class="row">
 				<div class="col-md-2">
 				</div>
-				<div class="col-md-8">
+				<div class="col-md-4">
 					<div class="carousel slide" id="carousel-678907">
 						<ol class="carousel-indicators">
 							<li data-slide-to="0" data-target="#carousel-678907" class="active">
@@ -94,6 +94,53 @@
 							<li data-slide-to="1" data-target="#carousel-678907">
 							</li>
 							<li data-slide-to="2" data-target="#carousel-678907">
+							</li>
+						</ol>
+						<div class="carousel-inner">
+							<div class="carousel-item active">
+								<img class="d-block w-100" alt="Carousel Bootstrap First" src="imagens/favela.jpg" width=1000 height=300>
+								<div class="carousel-caption">
+									<h4>
+										First Thumbnail label
+									</h4>
+									<p>
+										Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+									</p>
+								</div>
+							</div>
+							<div class="carousel-item">
+								<img class="d-block w-100" alt="Carousel Bootstrap Second" src="imagens/original.jpg" width=500 height=300>
+								<div class="carousel-caption">
+									<h4>
+										Second Thumbnail label
+									</h4>
+									<p>
+										Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+									</p>
+								</div>
+							</div>
+							<div class="carousel-item">
+								<img class="d-block w-100" alt="Carousel Bootstrap Third" src="imagens/children-studying.jpg" width=400 height=300>
+								<div class="carousel-caption">
+									<h4>
+										Third Thumbnail label
+									</h4>
+									<p>
+										Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+									</p>
+								</div>
+							</div>
+						</div> <a class="carousel-control-prev" href="#carousel-678907" data-slide="prev"><span class="carousel-control-prev-icon"></span> <span class="sr-only">Previous</span></a> <a class="carousel-control-next" href="#carousel-678907" data-slide="next"><span class="carousel-control-next-icon"></span> <span class="sr-only">Next</span></a>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="carousel slide" id="carousel-58630">
+						<ol class="carousel-indicators">
+							<li data-slide-to="0" data-target="#carousel-58630" class="active">
+							</li>
+							<li data-slide-to="1" data-target="#carousel-58630">
+							</li>
+							<li data-slide-to="2" data-target="#carousel-58630">
 							</li>
 						</ol>
 						<div class="carousel-inner">
@@ -130,7 +177,7 @@
 									</p>
 								</div>
 							</div>
-						</div> <a class="carousel-control-prev" href="#carousel-678907" data-slide="prev"><span class="carousel-control-prev-icon"></span> <span class="sr-only">Previous</span></a> <a class="carousel-control-next" href="#carousel-678907" data-slide="next"><span class="carousel-control-next-icon"></span> <span class="sr-only">Next</span></a>
+						</div> <a class="carousel-control-prev" href="#carousel-58630" data-slide="prev"><span class="carousel-control-prev-icon"></span> <span class="sr-only">Previous</span></a> <a class="carousel-control-next" href="#carousel-58630" data-slide="next"><span class="carousel-control-next-icon"></span> <span class="sr-only">Next</span></a>
 					</div>
 				</div>
 				<div class="col-md-2">
@@ -143,13 +190,13 @@
 			<div class="row">
 				<div class="col-md-2">
 				</div>
-				<div class="col-md-8">
+				<div class="col-md-4">
 					<h3>
 						h3. Lorem ipsum dolor sit amet.
 					</h3>
 					<div class="row">
 						<div class="col-md-6">
-							<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg">
+							<img alt="Fotografia biblioteca" src="imagens/brain-logo.jpg"  width=300 height=200>
 							<p>
 								Lorem ipsum dolor sit amet, <strong>consectetur adipiscing elit</strong>. Aliquam eget sapien sapien. Curabitur in metus urna. In hac habitasse platea dictumst. Phasellus eu sem sapien, sed vestibulum velit. Nam purus nibh, lacinia non faucibus et, pharetra in dolor. Sed iaculis posuere diam ut cursus. <em>Morbi commodo sodales nisi id sodales. Proin consectetur, nisi id commodo imperdiet, metus nunc consequat lectus, id bibendum diam velit et dui.</em> Proin massa magna, vulputate nec bibendum nec, posuere nec lacus. <small>Aliquam mi erat, aliquam vel luctus eu, pharetra quis elit. Nulla euismod ultrices massa, et feugiat ipsum consequat eu.</small>
 							</p>
@@ -196,53 +243,6 @@
 			</div>
 			<div class="row">
 				<div class="col-md-2">
-				</div>
-				<div class="col-md-8">
-					<div class="carousel slide" id="carousel-58630">
-						<ol class="carousel-indicators">
-							<li data-slide-to="0" data-target="#carousel-58630" class="active">
-							</li>
-							<li data-slide-to="1" data-target="#carousel-58630">
-							</li>
-							<li data-slide-to="2" data-target="#carousel-58630">
-							</li>
-						</ol>
-						<div class="carousel-inner">
-							<div class="carousel-item active">
-								<img class="d-block w-100" alt="Carousel Bootstrap First" src="https://www.layoutit.com/img/sports-q-c-1600-500-1.jpg">
-								<div class="carousel-caption">
-									<h4>
-										First Thumbnail label
-									</h4>
-									<p>
-										Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
-									</p>
-								</div>
-							</div>
-							<div class="carousel-item">
-								<img class="d-block w-100" alt="Carousel Bootstrap Second" src="https://www.layoutit.com/img/sports-q-c-1600-500-2.jpg">
-								<div class="carousel-caption">
-									<h4>
-										Second Thumbnail label
-									</h4>
-									<p>
-										Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
-									</p>
-								</div>
-							</div>
-							<div class="carousel-item">
-								<img class="d-block w-100" alt="Carousel Bootstrap Third" src="https://www.layoutit.com/img/sports-q-c-1600-500-3.jpg">
-								<div class="carousel-caption">
-									<h4>
-										Third Thumbnail label
-									</h4>
-									<p>
-										Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
-									</p>
-								</div>
-							</div>
-						</div> <a class="carousel-control-prev" href="#carousel-58630" data-slide="prev"><span class="carousel-control-prev-icon"></span> <span class="sr-only">Previous</span></a> <a class="carousel-control-next" href="#carousel-58630" data-slide="next"><span class="carousel-control-next-icon"></span> <span class="sr-only">Next</span></a>
-					</div>
 				</div>
 				<div class="col-md-2">
 				</div>
