conexão parcial com o banco de dados.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -54,10 +54,11 @@
 							<div class="col-md-12"></div>
 						</div>
 					</div>
+					<!-- VIDEO AULA: Criando nosso primeiro Sistema WEB (Minuto 50) -->
 					<div class="col-md-8">
-						<form role="form" class="form-inline">
+						<form role="form" class="form-inline" action="pesquisarservlet" method="post">
 							<div class="form-group">
-								<input type="search" class="form-control" id="pesquisar">
+								<input type="search" class="form-control" id="pesquisar" name="livroPesquisar">
 							</div>
 							<button type="submit" class="btn btn-primary">pesquisar
 							</button>
