Inclusão de conexão com o banco de dados - postgres. Adequação da página de criação de usuários.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -56,9 +56,9 @@
 					</div>
 					<!-- VIDEO AULA: Criando nosso primeiro Sistema WEB (Minuto 50) -->
 					<div class="col-md-8">
-						<form role="form" class="form-inline" action="pesquisarservlet" method="post">
+						<form role="form" class="form-inline" action="pesquisaservlet" method="post">
 							<div class="form-group">
-								<input type="search" class="form-control" id="pesquisar" name="livroPesquisar">
+								<input type="search" class="form-control" id="pesquisar" name="txtPesquisa">
 							</div>
 							<button type="submit" class="btn btn-primary">pesquisar
 							</button>
