--- a/prototipos-html-biblioteca/buscar-livro.html
+++ b/prototipos-html-biblioteca/buscar-livro.html
@@ -15,30 +15,21 @@
     <div class="row">
       <div class="col-md-12">
         <i class="material-icons">
-          account_box
+          book
         </i>
         <form role="form">
-          <div class="form-group">
 
-            <label for="inputEmail1">
-              Email
-            </label>
-            <input type="email" class="form-control" id="inputEmail1" />
-          </div>
           <div class="form-group">
-
-            <label for="inputPassword1">
-              Senha
+            <label for="searchInputNameBook">
+              Nome do livro
             </label>
-            <input type="password" class="form-control" id="inputPassword1" />
+            <input type="text" class="form-control" id="searchInputNameBook" />
           </div>
 
           <button type="submit" class="btn btn-primary">
-            Entrar
+            Buscar
           </button>
         </form>
-
-        <span>Não possui cadastro? <a href="#">Cadastre-se agora</a></span>
 
       </div>
      </div>
