--- a/prototipos-html-biblioteca/cadastro-usuario.html
+++ b/prototipos-html-biblioteca/cadastro-usuario.html
@@ -50,33 +50,33 @@
 
           <div class="form-group">
 
-            <label for="exampleInputName">
+            <label for="inputName">
               Nome
             </label>
-            <input type="text" class="form-control" id="exampleInputName" />
+            <input type="text" class="form-control" id="inputName" />
           </div>
 
           <div class="form-group">
 
-            <label for="exampleInputEmail1">
+            <label for="inputEmail1">
               Email
             </label>
-            <input type="email" class="form-control" id="exampleInputEmail1" />
+            <input type="email" class="form-control" id="inputEmail1" />
           </div>
           <div class="form-group">
 
-            <label for="exampleInputPassword1">
+            <label for="inputPassword1">
               Senha
             </label>
-            <input type="password" class="form-control" id="exampleInputPassword1" />
+            <input type="password" class="form-control" id="inputPassword1" />
           </div>
 
           <div class="form-group">
 
-            <label for="exampleInputPassword1">
+            <label for="inputPassword1">
               Confirme a Senha
             </label>
-            <input type="password" class="form-control" id="exampleInputPasswordCheck" />
+            <input type="password" class="form-control" id="inputPasswordCheck" />
           </div>
 
           <div class="form-group">
