Botao minha conta

--- a/prototipos-html-biblioteca/buscar-livro.html
+++ b/prototipos-html-biblioteca/buscar-livro.html
@@ -33,6 +33,14 @@
 
       </div>
      </div>
+     <div class="row">
+       <div class="col-md-12">
+
+         <button type="button" class="btn btn-success mt-4">
+           Minha Conta
+         </button>
+       </div>
+     </div>
    </div>
 
    <!--SCRIPTS BOOTSTRAP-->
