Resumo de livros disponiveis

--- a/prototipos-html-biblioteca/buscar-livro.html
+++ b/prototipos-html-biblioteca/buscar-livro.html
@@ -41,6 +41,28 @@
          </button>
        </div>
      </div>
+
+     <div class="row mt-4">
+       <div class="col-md-12">
+         <h3>{{Veja alguns dos livros disponíveis...}}</h3>
+           <ul>
+             <li class="list-item">
+               {{Título do livro}}
+             </li>
+             <li class="list-item">
+               {{Título do livro}}
+             </li>
+             <li class="list-item">
+               {{Título do livro}}
+             </li>
+             <li class="list-item">
+               {{Título do livro}}
+             </li>
+             <li class="list-item">
+               {{Título do livro}}
+             </li>
+           </ul>
+       </div>
    </div>
 
    <!--SCRIPTS BOOTSTRAP-->
