inclusão de alguns parametros na página de cadastro de livro + inicio da configuração do servlet de cadastro de livro + ajuste no sql de criação das relações.

--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -18,7 +18,7 @@
 		<div class="row">
 			<div class="col-md-12">
 				<i class="material-icons"> account_box </i>
-				<form role="form" action="loginservlet" method="post">
+				<form role="form" action="home" method="post">
 					<div class="form-group">
 
 						<label for="exampleInputEmail1"> Email </label> <input
