--- a/WebContent/cadastro-livro.html
+++ b/WebContent/cadastro-livro.html
@@ -25,45 +25,49 @@
 			<div class="col-md-12">
 				<form role="form" action="cadastralivro" method="post">
 					<div class="form-group">
-						<input class="form-control" id="inputNomeLivro" type="text"
+						<label for="inputNomeLivro"> Nome do livro </label> <input
+							class="form-control" id="inputNomeLivro" type="text"
 							name="txtNomeLivro">
 					</div>
 
 					<div class="form-group">
-						<input class="form-control" id="inputAutor" type="text"
-							name="txtAutor">
+						<label for="inputNomeLivro"> Nome do Autor </label> <input
+							class="form-control" id="inputAutor" type="text" name="txtAutor">
 					</div>
 
 					<div class="form-group">
-						<input class="form-control" id="inputAno" type="date"
-							name="txtAno">
+						<label for="inputNomeLivro"> Data em que foi escrito </label> <input
+							class="form-control" id="inputAno" type="date" name="txtAno">
 					</div>
 
 					<div class="form-group">
-						<input class="form-control" id="inputVersao" type="number"
+						<label for="inputNomeLivro"> Versão </label> <input
+							class="form-control" id="inputVersao" type="number"
 							name="txtVersao">
 					</div>
 
 					<div class="form-group">
-						<input class="form-control" id="inputEditora" type="text"
+						<label for="inputNomeLivro"> Editora </label> <input
+							class="form-control" id="inputEditora" type="text"
 							name="txtEditora">
 					</div>
 
 					<div class="form-group">
-						<input class="form-control" id="inputLinkPDF" type="url"
-							name="txtUrl">
+						<label for="inputNomeLivro"> Link PDF </label> <input
+							class="form-control" id="inputLinkPDF" type="url" name="txtUrl">
 					</div>
 
 					<div class="form-group">
-						<input class="form-control" id="inputSinopse" type="text"
+						<label for="inputNomeLivro"> Sinopse </label> <input
+							class="form-control" id="inputSinopse" type="text"
 							name="txtSinopse">
 					</div>
 
-					<div class="form-group">
-						<!-- PENSAR MELHOR NESSA PARTE -->
+					<!--<div class="form-group">
+						
 						<input class="form-control" id="exampleInputPassword1"
 							type="image" name="txtCapa">
-					</div>
+					</div>-->
 					<button type="submit" class="btn btn-primary">Cadastrar</button>
 				</form>
 			</div>
