--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -56,7 +56,7 @@
 					</div>
 					<!-- VIDEO AULA: Criando nosso primeiro Sistema WEB (Minuto 50) -->
 					<div class="col-md-8">
-						<form role="form" class="form-inline" action="/pesquisaservlet" method="post">
+						<form role="form" class="form-inline" action="pesquisar" method="post">
 							<div class="form-group">
 								<input type="search" class="form-control" id="pesquisar" name="txtPesquisa">
 							</div>
