inclusão da busca por livros + atualização da página minha conta.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -23,9 +23,8 @@
 				<ul class="nav">
 					<li class="nav-item"><a class="nav-link active" href="#">Página inicial</a>
 					</li>
-					<li class="nav-item"><a class="nav-link" href="#">Minha conta</a>
+					<li class="nav-item"><a class="nav-link" href="http://localhost:8080/Episteme/minha-conta.jsp">Minha conta</a>
 					</li>
-					<!--  <li class="nav-item"><a class="nav-link active" href="#">Login</a>
 					</li>
 					<li class="nav-item"><a class="nav-link active" href="#">Novo usuário</a>
 					</li>-->
