--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -5,402 +5,124 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>Home - Episteme</title>
-
-<meta name="description"
-	content="Source code generated using layoutit.com">
-<meta name="author" content="LayoutIt!">
+<title>.: Home - Episteme :.</title>
 
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
 
 </head>
 <body>
-
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-md-12">
+				<img alt="Logo biblioteca" src="imagens/episteme_1.jpg" width=120
+					height=120 align="right">
+
 				<ul class="nav">
-					<li class="nav-item"><a class="nav-link active" href="#">Página inicial</a>
-					</li>
-					<li class="nav-item"><a class="nav-link" href="http://localhost:8080/Episteme/minha-conta.jsp">Minha conta</a>
-					</li>
-					</li>
-					<li class="nav-item"><a class="nav-link active" href="#">Novo usuário</a>
-					</li>-->
-					<li class="nav-item"><a class="nav-link disabled" href="#">Messages</a>
-					</li>
-					<li class="nav-item dropdown ml-md-auto"><a
-						class="nav-link dropdown-toggle" href="http://example.com"
-						id="navbarDropdownMenuLink" data-toggle="dropdown">Opções</a>
-						<div class="dropdown-menu dropdown-menu-right"
-							aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="#">Minha conta</a> <a
-								class="dropdown-item" href="#">Login</a> <a
-								class="dropdown-item" href="#">Novo usuário</a>
-							<div class="dropdown-divider"></div>
-							<a class="dropdown-item" href="#">Pensar em algo...</a>
-						</div></li>
+					<li class="nav-item"><a class="nav-link disabled"
+						href="./index.html">Página inicial</a></li>
+					<li class="nav-item"><a class="nav-link active"
+						href="./minha-conta.jsp">Minha conta</a></li>
+					<li class="nav-item"><a class="nav-link active"
+						href="./cadastro-livro.html">Cadastrar livro</a></li>
 				</ul>
-				<div class="row">
-					<div class="col-md-2">
-						<div class="row">
-							<div class="col-md-12"></div>
-						</div>
-						<img alt="Logo biblioteca" src="imagens/episteme_1.jpg" width=200
-							height=200>
-						<div class="row">
-							<div class="col-md-12"></div>
-						</div>
-					</div>
-					<!-- VIDEO AULA: Criando nosso primeiro Sistema WEB (Minuto 50) -->
-					<div class="col-md-8">
-						<form role="form" class="form-inline" action="pesquisar" method="post">
+				<div class="row" align="center">
+					<div class="col-md-1">&nbsp;</div>
+					<div class="col-md-10">
+						<form class="form-inline" role="form" action="pesquisar"
+							method="post">
 							<div class="form-group">
-								<input type="search" class="form-control" id="pesquisar" name="txtPesquisa">
+								<input type="search" class="form-control" id="pesquisar"
+									name="txtPesquisa">
 							</div>
-							<button type="submit" class="btn btn-primary">pesquisar
-							</button>
+							<button type="submit" class="btn btn-primary">pesquisar</button>
 						</form>
 					</div>
-					<div class="col-md-2"></div>
-					<div class="row">
-						<div class="col-md-2"></div>
-						<div class="col-md-8">
-							<div class="row">
-								<div class="col-md-6">
-									<div class="carousel slide" id="carousel-75796">
-										<ol class="carousel-indicators">
-											<li data-slide-to="0" data-target="#carousel-75796"
-												class="active"></li>
-											<li data-slide-to="1" data-target="#carousel-75796"></li>
-											<li data-slide-to="2" data-target="#carousel-75796"></li>
-										</ol>
-										<div class="carousel-inner">
-											<div class="carousel-item active">
-												<img class="d-block w-100" alt="Carousel Bootstrap First"
-													src="https://www.layoutit.com/img/sports-q-c-1600-500-1.jpg" />
-												<div class="carousel-caption">
-													<h4>Titulo do ultimo livro publicado</h4>
-													<p></p>
-												</div>
-											</div>
-											<div class="carousel-item">
-												<img class="d-block w-100" alt="Carousel Bootstrap Second"
-													src="https://www.layoutit.com/img/sports-q-c-1600-500-2.jpg" />
-												<div class="carousel-caption">
-													<h4>Titulo do ultimo livro publicado</h4>
-													<p>Nome do autor, ano do livro e versão</p>
-												</div>
-											</div>
-											<div class="carousel-item">
-												<img class="d-block w-100" alt="Carousel Bootstrap Third"
-													src="https://www.layoutit.com/img/sports-q-c-1600-500-3.jpg" />
-												<div class="carousel-caption">
-													<h4>Titulo do penultimo livro publicado</h4>
-													<p>Nome do autor, ano do livro e versão</p>
-												</div>
-											</div>
-										</div>
-										<a class="carousel-control-prev" href="#carousel-75796"
-											data-slide="prev"><span
-											class="carousel-control-prev-icon"></span> <span
-											class="sr-only">Previous</span></a> <a
-											class="carousel-control-next" href="#carousel-75796"
-											data-slide="next"><span
-											class="carousel-control-next-icon"></span> <span
-											class="sr-only">Next</span></a>
-									</div>
-								</div>
-								<div class="col-md-6">
-									<div class="carousel slide" id="carousel-158748">
-										<ol class="carousel-indicators">
-											<li data-slide-to="0" data-target="#carousel-158748"
-												class="active"></li>
-											<li data-slide-to="1" data-target="#carousel-158748"></li>
-											<li data-slide-to="2" data-target="#carousel-158748"></li>
-										</ol>
-										<div class="carousel-inner">
-											<div class="carousel-item active">
-												<img class="d-block w-100" alt="Carousel Bootstrap First"
-													src="https://www.layoutit.com/img/sports-q-c-1600-500-1.jpg" />
-												<div class="carousel-caption">
-													<h4>Titulo do antepultimo livro publicado</h4>
-													<p>Nome do autor, ano do livro e versão</p>
-												</div>
-											</div>
-											<div class="carousel-item">
-												<img class="d-block w-100" alt="Carousel Bootstrap Second"
-													src="https://www.layoutit.com/img/sports-q-c-1600-500-2.jpg" />
-												<div class="carousel-caption">
-													<h4>Titulo do segundo livro mais lido</h4>
-													<p>Nome do autor, ano do livro e versão</p>
-												</div>
-											</div>
-											<div class="carousel-item">
-												<img class="d-block w-100" alt="Carousel Bootstrap Third"
-													src="https://www.layoutit.com/img/sports-q-c-1600-500-3.jpg" />
-												<div class="carousel-caption">
-													<h4>Titulo do terceiro livro mais lido</h4>
-													<p>Nome do autor, ano do livro e versão</p>
-												</div>
-											</div>
-										</div>
-										<a class="carousel-control-prev" href="#carousel-158748"
-											data-slide="prev"><span
-											class="carousel-control-prev-icon"></span> <span
-											class="sr-only">Previous</span></a> <a
-											class="carousel-control-next" href="#carousel-158748"
-											data-slide="next"><span
-											class="carousel-control-next-icon"></span> <span
-											class="sr-only">Next</span></a>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-2"></div>
-						</div>
-					</div>
-				</div>
-
-				<div class="row">
-					<div class="col-md-12"></div>
-				</div>
-				<div class="row">
-					<div class="col-md-2"></div>
-					<div class="col-md-8">
-						<h3>Episteme</h3>
-						<div class="row">
-							<div class="col-md-6">
-								<img alt="Fotografia biblioteca" src="imagens/brain-logo.jpg"
-									width=300 height=200>
-								<p>
-									Episteme do grego signifca... <strong>Escrever
-										aquiLÇASMlaM </strong>. Continuar
-									escrevendo.laNDLKALDmsalkdlksanlknLÇAS
-									ASLÇMAÇLas,l,aÇL,SAÇL,açlslçaSÇL,ASDLKNDKLSNklsnakldsanklL
-									SADNLKAMlkadmklaMLKAMklaSMKLASMlasMASklmASLKLASmklasKLALSK
-									LKSAMKLSAMlASMKLSAMKLsamLKSMALasmLASMlkaMKLAMlksamklsaMLKA
-									LASKMKLAMLKSAMlçsmÇLASMçlasÇLSA,çlas,ÇLA,çlA,ÇLAS,çla,LÇAS
-									LASKMKLAMLKSAMlçsmÇLASMçlasÇLSA,çlas,ÇLA,çlA,ÇLAS,çla,LÇAS
-									LASKMKLAMLKSAMlçsmÇLASMçlasÇLSA,çlas,ÇLA,çlA,ÇLAS,çla,LÇAS
-									LASKMKLAMLKSAMlçsmÇLASMçlasÇLSA,çlas,ÇLA,çlA,ÇLAS,çla,LÇAS
-									LASKMKLAMLKSAMlçsmÇLASMçlasÇLSA,çlas,ÇLA,çlA,ÇLAS,çla,LÇAS
-									LASKMKLAMLKSAMlçsmÇLASMçlasÇLSA,çlas,ÇLA,çlA,ÇLAS,çla,LÇAS
-									LASKMKLAMLKSAMlçsmÇLASMçlasÇLSA,çlas,ÇLA,çlA,ÇLAS,çla,LÇAS
-									LASKMKLAMLKSAMlçsmÇLASMçlasÇLSA,çlas,ÇLA,çlA,ÇLAS,çla,LÇAS
-									LASKMKLAMLKSAMlçsmÇLASMçlasÇLSA,çlas,ÇLA,çlA,ÇLAS,çla,LÇAS
-									LASKMKLAMLKSAMlçsmÇLASMçlasÇLSA,çlas,ÇLA,çlA,ÇLAS,çla,LÇAS
-									LASKMKLAMLKSAMlçsmÇLASMçlasÇLSA,çlas,ÇLA,çlA,ÇLAS,çla,LÇAS <em>Escrever
-										mais.</em> Proin massa magna, vulputate nec bibendum nec, posuere
-									nec lacus. <small>Aliquam mi erat, aliquam vel luctus
-										eu, pharetra quis elit. Nulla euismod ultrices massa, et
-										feugiat ipsum consequat eu.</small>
-								</p>
-							</div>
-							<div class="col-md-6">
-								<dl>
-									<dt>Lista de alguma coisa interessante</dt>
-									<dd>A descripSADSAASSDAtion list is perfect for defining
-										terms.</dd>
-									<dt>Euismod</dt>
-									<dd>Vestibulum id ligula porta felis euismod semper eget
-										lacinia odio sem nec elit.</dd>
-									<dd>Donec id elit non mi porta gravida at eget metus.</dd>
-									<dt>Malesuada porta</dt>
-									<dd>Etiam porta sem malesuada magna mollis euismod.</dd>
-									<dt>Felis euismod semper eget lacinia</dt>
-									<dd>Fusce dapibus, tellus ac cursus commodo, tortor mauris
-										condimentum nibh, ut fermentum massa justo sit amet risus.</dd>
-								</dl>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-2"></div>
-				</div>
-				<div class="row">
-					<div class="col-md-12">
-
-						<div class="row">
-							<div class="col-md-12"></div>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-2"></div>
-						<div class="col-md-2"></div>
-					</div>
-					<div class="row">
-						<div class="col-md-4">
-							<div class="row">
-								<div class="col-md-12"></div>
-							</div>
-							<div class="row">
-								<div class="col-md-12" align="justify">
-
-									<address>
-										<strong>Episteme, Inc.</strong><br> Rua dos bobos, Nº 0.<br>
-										SP, CEP:000000-000<br> <abbr title="Telefone">P:</abbr>
-										(11) 9999-9999
-									</address>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-md-12"></div>
-							</div>
-						</div>
-						<div class="col-md-4">
-							<div class="row">
-								<div class="col-md-12"></div>
-							</div>
-							<div class="row" align="justify">
-								<div class="col-md-6">
-									<a id="modal-262616" href="#modal-container-262616"
-										role="button" class="btn" data-toggle="modal">Link pra
-										algum lugar</a>
-
-									<div class="modal fade" id="modal-container-262616"
-										role="dialog" aria-labelledby="myModalLabel"
-										aria-hidden="true">
-										<div class="modal-dialog" role="document">
-											<div class="modal-content">
-												<div class="modal-header">
-													<h5 class="modal-title" id="myModalLabel">Modal title</h5>
-													<button type="button" class="close" data-dismiss="modal">
-														<span aria-hidden="true">×</span>
-													</button>
-												</div>
-												<div class="modal-body">...</div>
-												<div class="modal-footer">
-
-													<button type="button" class="btn btn-primary">Save
-														changes</button>
-													<button type="button" class="btn btn-secondary"
-														data-dismiss="modal">Close</button>
-												</div>
-											</div>
-
-										</div>
-
-									</div>
-
-									<a id="modal-297530" href="#modal-container-297530"
-										role="button" class="btn" data-toggle="modal">Link pra
-										outro lugar</a>
-
-									<div class="modal fade" id="modal-container-297530"
-										role="dialog" aria-labelledby="myModalLabel"
-										aria-hidden="true">
-										<div class="modal-dialog" role="document">
-											<div class="modal-content">
-												<div class="modal-header">
-													<h5 class="modal-title" id="myModalLabel">Modal title</h5>
-													<button type="button" class="close" data-dismiss="modal">
-														<span aria-hidden="true">×</span>
-													</button>
-												</div>
-												<div class="modal-body">...</div>
-												<div class="modal-footer">
-
-													<button type="button" class="btn btn-primary">Save
-														changes</button>
-													<button type="button" class="btn btn-secondary"
-														data-dismiss="modal">Close</button>
-												</div>
-											</div>
-
-										</div>
-
-									</div>
-
-								</div>
-								<div class="col-md-6">
-									<a id="modal-613219" href="#modal-container-613219"
-										role="button" class="btn" data-toggle="modal">Link pra
-										outro lugar</a>
-
-									<div class="modal fade" id="modal-container-613219"
-										role="dialog" aria-labelledby="myModalLabel"
-										aria-hidden="true">
-										<div class="modal-dialog" role="document">
-											<div class="modal-content">
-												<div class="modal-header">
-													<h5 class="modal-title" id="myModalLabel">Modal title</h5>
-													<button type="button" class="close" data-dismiss="modal">
-														<span aria-hidden="true">×</span>
-													</button>
-												</div>
-												<div class="modal-body">...</div>
-												<div class="modal-footer">
-
-													<button type="button" class="btn btn-primary">Save
-														changes</button>
-													<button type="button" class="btn btn-secondary"
-														data-dismiss="modal">Close</button>
-												</div>
-											</div>
-
-										</div>
-
-									</div>
-
-									<a id="modal-549066" href="#modal-container-549066"
-										role="button" class="btn" data-toggle="modal">inclua algum
-										link aqui</a>
-
-									<div class="modal fade" id="modal-container-549066"
-										role="dialog" aria-labelledby="myModalLabel"
-										aria-hidden="true">
-										<div class="modal-dialog" role="document">
-											<div class="modal-content">
-												<div class="modal-header">
-													<h5 class="modal-title" id="myModalLabel">Modal title</h5>
-													<button type="button" class="close" data-dismiss="modal">
-														<span aria-hidden="true">×</span>
-													</button>
-												</div>
-												<div class="modal-body">...</div>
-												<div class="modal-footer">
-
-													<button type="button" class="btn btn-primary">Save
-														changes</button>
-													<button type="button" class="btn btn-secondary"
-														data-dismiss="modal">Close</button>
-												</div>
-											</div>
-
-										</div>
-
-									</div>
-
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-md-12"></div>
-							</div>
-						</div>
-						<div class="col-md-4">
-							<div class="row">
-								<div class="col-md-12"></div>
-							</div>
-							<div class="row">
-								<div class="col-md-12">
-									<blockquote class="blockquote">
-										<p class="mb-0">Escreva alguma frase que tenha a ver com
-											estudo neste local. hahahahahahahahahah.</p>
-										<footer class="blockquote-footer">
-											Escreva aqui qualquer outra coisa, tipo a fonte <cite>Deus
-												é top</cite>
-										</footer>
-									</blockquote>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-md-12"></div>
-							</div>
-						</div>
-					</div>
+					<div class="col-md-1">&nbsp;</div>
 				</div>
 			</div>
 		</div>
+
+		<!-- #INICIO DO DESCRITIVO SOBRE A BIBLIOTECA -->
+		<div class="row">
+			<div class="col-md-2">&nbsp;</div>
+			<div class="col-md-8">
+				<h3 align="left">Episteme</h3>
+				<img alt="Fotografia biblioteca" src="imagens/predio.jpeg" width=400
+					height=300 align="middle">
+				<div class="row">
+					<div class="col-md-6">
+						<p>
+							Episteme do grego signifca... <strong>Escrever
+								aquiLÇASMlaM </strong>. Continuar escrevendo.laNDLKALDmsalkdlksanlknLÇAS
+							ASLÇMAÇLas,l,aÇL,SAÇL,açlslçaSÇL,ASDLKNDKLSNklsnakldsanklL
+							SADNLKAMlkadmklaMLKAMklaSMKLASMlasMASklmASLKLASmklasKLALSK
+							LKSAMKLSAMlASMKLSAMKLsamLKSMALasmLASMlkaMKLAMlksamklsaMLKA
+							LASKMKLAMLKSAMlçsmÇLASMçlasÇLSA,çlas,ÇLA,çlA,ÇLAS,çla,LÇAS
+							LASKMKLAMLKSAMlçsmÇLASMçlasÇLSA,çlas,ÇLA,çlA,ÇLAS,çla,LÇAS
+							LASKMKLAMLKSAMlçsmÇLASMçlasÇLSA,çlas,ÇLA,çlA,ÇLAS,çla,LÇAS
+							LASKMKLAMLKSAMlçsmÇLASMçlasÇLSA,çlas,ÇLA,çlA,ÇLAS,çla,LÇAS
+							LASKMKLAMLKSAMlçsmÇLASMçlasÇLSA,çlas,ÇLA,çlA,ÇLAS,çla,LÇAS
+							LASKMKLAMLKSAMlçsmÇLASMçlasÇLSA,çlas,ÇLA,çlA,ÇLAS,çla,LÇAS
+							LASKMKLAMLKSAMlçsmÇLASMçlasÇLSA,çlas,ÇLA,çlA,ÇLAS,çla,LÇAS
+							LASKMKLAMLKSAMlçsmÇLASMçlasÇLSA,çlas,ÇLA,çlA,ÇLAS,çla,LÇAS
+							LASKMKLAMLKSAMlçsmÇLASMçlasÇLSA,çlas,ÇLA,çlA,ÇLAS,çla,LÇAS
+							LASKMKLAMLKSAMlçsmÇLASMçlasÇLSA,çlas,ÇLA,çlA,ÇLAS,çla,LÇAS
+							LASKMKLAMLKSAMlçsmÇLASMçlasÇLSA,çlas,ÇLA,çlA,ÇLAS,çla,LÇAS <em>Escrever
+								mais.</em> Proin massa magna, vulputate nec bibendum nec, posuere nec
+							lacus. <small>Aliquam mi erat, aliquam vel luctus eu,
+								pharetra quis elit. Nulla euismod ultrices massa, et feugiat
+								ipsum consequat eu.</small>
+						</p>
+					</div>
+					<div class="col-md-6">
+						<dl>
+							<dt>Lista de alguma coisa interessante</dt>
+							<dd>A descripSADSAASSDAtion list is perfect for defining
+								terms.</dd>
+							<dt>Euismod</dt>
+							<dd>Vestibulum id ligula porta felis euismod semper eget
+								lacinia odio sem nec elit.</dd>
+							<dd>Donec id elit non mi porta gravida at eget metus.</dd>
+							<dt>Malesuada porta</dt>
+							<dd>Etiam porta sem malesuada magna mollis euismod.</dd>
+							<dt>Felis euismod semper eget lacinia</dt>
+							<dd>Fusce dapibus, tellus ac cursus commodo, tortor mauris
+								condimentum nibh, ut fermentum massa justo sit amet risus.</dd>
+						</dl>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-2">&nbsp;</div>
+		</div>
+		<!-- #FIM DO DESCRITIVO SOBRE A BIBLIOTECA -->
+
+		<!-- #INICIO DO RODAPÉ DA PÁGINA -->
+		<div class="row">
+			<div class="col-md-2">&nbsp;</div>
+			<div class="col-md-2" align="justify">
+				<address>
+					<strong>Episteme, Inc.</strong><br> Rua dos bobos, Nº 0.<br>
+					SP, CEP:000000-000<br> <abbr title="Telefone">P:</abbr> (11)
+					9999-9999
+				</address>
+			</div>
+			<div class="col-md-2">&nbsp;</div>
+
+			<div class="col-md-4" align="justify">
+				<blockquote class="blockquote">
+					<p class="mb-0">Escreva alguma frase que tenha a ver com estudo
+						neste local. hahahahahahahahahah.</p>
+					<footer class="blockquote-footer">
+						Escreva aqui qualquer outra coisa, tipo a fonte <cite>Deus
+							é top</cite>
+					</footer>
+				</blockquote>
+			</div>
+			<div class="col-md-2">&nbsp;</div>
+		</div>
+		<!-- #FIM DO RODAPÉ DA PÁGINA -->
+
 	</div>
 	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
