atualização de front + correção de bug: senhas diferentes no cadastro de usuário.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -26,19 +26,18 @@
 					<li class="nav-item"><a class="nav-link active"
 						href="./cadastro-livro.html">Cadastrar livro</a></li>
 				</ul>
-				<div class="row" align="center">
-					<div class="col-md-1">&nbsp;</div>
-					<div class="col-md-10">
+				<div class="row">
+					<div class="col-md-5">&nbsp;</div>
+					<div class="col-md-7" align="center">
 						<form class="form-inline" role="form" action="pesquisar"
 							method="post">
-							<div class="form-group">
+							<div class="form-group" align="center">
 								<input type="search" class="form-control" id="pesquisar"
 									name="txtPesquisa">
 							</div>
 							<button type="submit" class="btn btn-primary">pesquisar</button>
 						</form>
 					</div>
-					<div class="col-md-1">&nbsp;</div>
 				</div>
 			</div>
 		</div>
@@ -47,32 +46,28 @@
 		<div class="row">
 			<div class="col-md-2">&nbsp;</div>
 			<div class="col-md-8">
-				<h3 align="left">Episteme</h3>
+				<h3 align="left"><strong>Episteme</strong></h3>
 				<img alt="Fotografia biblioteca" src="imagens/predio.jpeg" width=400
 					height=300 align="middle">
 				<div class="row">
 					<div class="col-md-6">
 						<p>
-							Episteme do grego signifca... <strong>Escrever
-								aquiLÇASMlaM </strong>. Continuar escrevendo.laNDLKALDmsalkdlksanlknLÇAS
-							ASLÇMAÇLas,l,aÇL,SAÇL,açlslçaSÇL,ASDLKNDKLSNklsnakldsanklL
-							SADNLKAMlkadmklaMLKAMklaSMKLASMlasMASklmASLKLASmklasKLALSK
-							LKSAMKLSAMlASMKLSAMKLsamLKSMALasmLASMlkaMKLAMlksamklsaMLKA
-							LASKMKLAMLKSAMlçsmÇLASMçlasÇLSA,çlas,ÇLA,çlA,ÇLAS,çla,LÇAS
-							LASKMKLAMLKSAMlçsmÇLASMçlasÇLSA,çlas,ÇLA,çlA,ÇLAS,çla,LÇAS
-							LASKMKLAMLKSAMlçsmÇLASMçlasÇLSA,çlas,ÇLA,çlA,ÇLAS,çla,LÇAS
-							LASKMKLAMLKSAMlçsmÇLASMçlasÇLSA,çlas,ÇLA,çlA,ÇLAS,çla,LÇAS
-							LASKMKLAMLKSAMlçsmÇLASMçlasÇLSA,çlas,ÇLA,çlA,ÇLAS,çla,LÇAS
-							LASKMKLAMLKSAMlçsmÇLASMçlasÇLSA,çlas,ÇLA,çlA,ÇLAS,çla,LÇAS
-							LASKMKLAMLKSAMlçsmÇLASMçlasÇLSA,çlas,ÇLA,çlA,ÇLAS,çla,LÇAS
-							LASKMKLAMLKSAMlçsmÇLASMçlasÇLSA,çlas,ÇLA,çlA,ÇLAS,çla,LÇAS
-							LASKMKLAMLKSAMlçsmÇLASMçlasÇLSA,çlas,ÇLA,çlA,ÇLAS,çla,LÇAS
-							LASKMKLAMLKSAMlçsmÇLASMçlasÇLSA,çlas,ÇLA,çlA,ÇLAS,çla,LÇAS
-							LASKMKLAMLKSAMlçsmÇLASMçlasÇLSA,çlas,ÇLA,çlA,ÇLAS,çla,LÇAS <em>Escrever
-								mais.</em> Proin massa magna, vulputate nec bibendum nec, posuere nec
+							O Departamento de Física da Faculdade de Filosofia, Ciências e Letras de Ribeirão Preto (FFCLRP), 
+							cidade a 320 km de São Paulo, guarda um acervo de mais de 1.200 livros de literatura de ficção científica e 
+							divulgação de ciência em um de seus prédios.
+							A Biblioteca Roberto C. Nascimento, localizada dentro de um laboratório do departamento, foi criada em 2013.
+							Segundo o diretor da biblioteca, o físico e professor da USP Osame Kinouchi, o acervo começou com os cerca de 
+							400 livros que pertenciam ao Clube de Leitores de Ficção Científica (CLFC). Graças a doações da comunidade 
+							acadêmica e de entusiastas da literatura sci-fi, mais volumes foram acrescentados à coleção.
+							Hoje, qualquer pessoa pode fazer o empréstimo de livros que vão desde clássicos brasileiros do gênero, como 
+							“A Filha do Inca”, de Menotti del Picchia, publicado originalmente em 1930 com o título “A República 3000”, 
+							até edições mais recentes lançadas no país.
+							Estão disponíveis ainda cerca de 500 livros da Colecção Argonautas, que publicou autores como Philip K. Dick, 
+							Robert A. Heinlein e Ursula K. Le Guin em língua portuguesa entre os anos 1950 e 2000. <em>Escrever
+							mais.</em> Proin massa magna, vulputate nec bibendum nec, posuere nec
 							lacus. <small>Aliquam mi erat, aliquam vel luctus eu,
-								pharetra quis elit. Nulla euismod ultrices massa, et feugiat
-								ipsum consequat eu.</small>
+							pharetra quis elit. Nulla euismod ultrices massa, et feugiat
+							ipsum consequat eu.</small>
 						</p>
 					</div>
 					<div class="col-md-6">
@@ -111,11 +106,9 @@
 
 			<div class="col-md-4" align="justify">
 				<blockquote class="blockquote">
-					<p class="mb-0">Escreva alguma frase que tenha a ver com estudo
-						neste local. hahahahahahahahahah.</p>
+					<p class="mb-0">O primeiro dever da inteligência é desconfiar dela mesma.</p>
 					<footer class="blockquote-footer">
-						Escreva aqui qualquer outra coisa, tipo a fonte <cite>Deus
-							é top</cite>
+						<cite>Einstein, Albert.</cite>
 					</footer>
 				</blockquote>
 			</div>
