--- a/WebContent/buscar-livro.html
+++ b/WebContent/buscar-livro.html
@@ -3,23 +3,34 @@
 <html lang="en" dir="ltr">
 <head>
 <meta charset="utf-8">
-<title></title>
+<title>.: Pesquisar :.</title>
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
 	rel="stylesheet">
 
-<link rel="stylesheet"
-	href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-	integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-	crossorigin="anonymous">
+<link href="css/bootstrap.min.css" rel="stylesheet">
+<link href="css/style.css" rel="stylesheet">
 
 </head>
 <body>
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-md-12">
+				<img alt="Logo biblioteca" src="imagens/episteme_1.jpg" width=120
+					height=120 align="right">
+
+				<ul class="nav">
+					<li class="nav-item"><a class="nav-link active"
+						href="./index.html">Página inicial</a></li>
+					<li class="nav-item"><a class="nav-link active"
+						href="./minha-conta.jsp">Minha conta</a></li>
+					<li class="nav-item"><a class="nav-link active"
+						href="./cadastro-livro.html">Cadastrar livro</a></li>
+				</ul>
+			</div>
+			<div class="col-md-2">&nbsp;</div>
+			<div class="col-md-8">
 				<i class="material-icons"> book </i>
 				<form role="form">
-
 					<div class="form-group">
 						<label for="searchInputNameBook"> Nome do livro </label> <input
 							type="text" class="form-control" id="searchInputNameBook" />
@@ -29,17 +40,12 @@
 				</form>
 
 			</div>
-		</div>
-		<div class="row">
-			<div class="col-md-12">
-
-				<button type="button" class="btn btn-success mt-4">Minha
-					Conta</button>
-			</div>
+			<div class="col-md-2">&nbsp;</div>
 		</div>
 
 		<div class="row mt-4">
-			<div class="col-md-12">
+			<div class="col-md-2">&nbsp;</div>
+			<div class="col-md-8">
 				<h3>{{Veja alguns dos livros disponíveis...}}</h3>
 				<ul>
 					<li class="list-item">{{Título do livro}}</li>
@@ -49,20 +55,13 @@
 					<li class="list-item">{{Título do livro}}</li>
 				</ul>
 			</div>
+			<div class="col-md-2">&nbsp;</div>
 		</div>
 	</div>
 
-	<!--SCRIPTS BOOTSTRAP-->
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-		integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-		crossorigin="anonymous"></script>
-	<script
-		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-		integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-		crossorigin="anonymous"></script>
-	<script
-		src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-		integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-		crossorigin="anonymous"></script>
+	<script src="js/jquery.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/scripts.js"></script>
+
 </body>
 </html>
