--- a/WebContent/cadastro-usuario.html
+++ b/WebContent/cadastro-usuario.html
@@ -3,16 +3,14 @@
 <html lang="en" dir="ltr">
 <head>
 <meta charset="utf-8">
-<title></title>
+<title>.: Cadastro de usuário :.</title>
 
 
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
 	rel="stylesheet">
 
-<link rel="stylesheet"
-	href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-	integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-	crossorigin="anonymous">
+<link href="css/bootstrap.min.css" rel="stylesheet">
+<link href="css/style.css" rel="stylesheet">
 
 </head>
 <body>
@@ -46,6 +44,11 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-md-12">
+				<img alt="Logo biblioteca" src="imagens/episteme_1.jpg" width=120
+					height=120 align="right">
+			</div>
+			<div class="col-md-2">&nbsp;</div>
+			<div class="col-md-8">
 				<i class="material-icons"> account_box </i>
 				<form role="form" action="cadastrausuarioservlet" method="post">
 
@@ -83,11 +86,11 @@
 
 					<div class="form-group">
 						<label for="tipo"> Tipo do Logradouro </label> <input type="text"
-							readonly="true" class="form-control" id="tipo" name="txtTipo" />
+							readonly="readonly" class="form-control" id="tipo" name="txtTipo" />
 					</div>
 					<div class="form-group">
 						<label for="logradouro"> Logradouro </label> <input type="text"
-							readonly="true" class="form-control" id="logradouro"
+							readonly="readonly" class="form-control" id="logradouro"
 							name="txtLogradouro" />
 					</div>
 					<div class="form-group">
@@ -100,21 +103,25 @@
 					</div>
 					<div class="form-group">
 						<label for="bairro"> Bairro </label> <input type="text"
-							readonly="true" class="form-control" id="bairro" name="txtBairro" />
+							readonly="readonly" class="form-control" id="bairro"
+							name="txtBairro" />
 					</div>
 					<div class="form-group">
 						<label for="cidade"> Cidade </label> <input type="text"
-							readonly="true" class="form-control" id="cidade" name="txtCidade" />
+							readonly="readonly" class="form-control" id="cidade"
+							name="txtCidade" />
 					</div>
 					<div class="form-group">
 						<label for="estado"> Estado </label> <input type="text"
-							readonly="true" class="form-control" id="estado" name="txtEstado" />
+							readonly="readonly" class="form-control" id="estado"
+							name="txtEstado" />
 					</div>
 
 					<button type="submit" class="btn btn-primary">Cadastrar</button>
 				</form>
 
 			</div>
+			<div class="col-md-2">&nbsp;</div>
 		</div>
 	</div>
 
