--- a/WebContent/emprestimos-detalhe.html
+++ b/WebContent/emprestimos-detalhe.html
@@ -1,49 +1,41 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
+<head>
+<meta charset="utf-8">
+<title></title>
 
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-        rel="stylesheet">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+	rel="stylesheet">
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link href="css/bootstrap.min.css" rel="stylesheet">
+<link href="css/style.css" rel="stylesheet">
 
-  </head>
-  <body>
-    <div class="container-fluid">
-    	<div class="row">
-    		<div class="col-md-12">
-          <h3>{{nome}}, seu Empréstimo do livro {{nome do livro}}</h3>
-            <ul>
-      				<li class="list-item">
-      				  {{status}}
-      				</li>
-      				<li class="list-item">
-      					{{Data devolução}}
-      				</li>
-      				<li class="list-item">
-      					{{Data Retirada}}
-      				</li>
-  			    </ul>
-    		</div>
-    	</div>
+</head>
+<body>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-md-12">
+				<h3>{{nome}}, seu Empréstimo do livro {{nome do livro}}</h3>
+				<ul>
+					<li class="list-item">{{status}}</li>
+					<li class="list-item">{{Data devolução}}</li>
+					<li class="list-item">{{Data Retirada}}</li>
+				</ul>
+			</div>
+		</div>
 
-    	<div class="row">
-    		<div class="col-md-6">
+		<div class="row">
+			<div class="col-md-6">
 
-    			<button type="button" class="btn btn-success">
-    				Voltar
-    			</button>
-    		</div>
-    		<div class="col-md-6">
+				<button type="button" class="btn btn-success">Voltar</button>
+			</div>
+			<div class="col-md-6">
 
-    			<button type="button" class="btn btn-success">
-    				Página Principal
-    			</button>
-    		</div>
-    	</div>
-    </div>
+				<button type="button" class="btn btn-success">Página
+					Principal</button>
+			</div>
+		</div>
+	</div>
 
-  </body>
+</body>
 </html>
