atualização da pagina minha conta para contemplar ajuste de dados.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -20,7 +20,7 @@
 
 				<ul class="nav">
 					<li class="nav-item"><a class="nav-link disabled"
-						href="./index.html">Página inicial</a></li>
+						href="#">Página inicial</a></li>
 					<li class="nav-item"><a class="nav-link active"
 						href="./minha-conta.jsp">Minha conta</a></li>
 					<li class="nav-item"><a class="nav-link active"
