--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -19,11 +19,11 @@
 					height=120 align="right">
 				<ul class="nav">
 					<li class="nav-item"><a class="nav-link disabled"
-						href="./index.html">Página inicial</a></li>
+						href="#">Página inicial</a></li>
 					<li class="nav-item"><a class="nav-link disabled"
-						href="./minha-conta.jsp">Minha conta</a></li>
+						href="#">Minha conta</a></li>
 					<li class="nav-item"><a class="nav-link disabled"
-						href="./cadastro-livro.html">Cadastrar livro</a></li>
+						href="#">Cadastrar livro</a></li>
 				</ul>
 			</div>
 			<div class="col-md-2">&nbsp;</div>
